# consearch

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  stale.yml
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: generate-client.sh  init-db.sql
src/consearch/: __init__.py  client.py  config.py
src/consearch/api/: __init__.py  app.py  dependencies.py
src/consearch/api/routes/: __init__.py  health.py  resolve.py  search.py
src/consearch/api/schemas/: __init__.py  base.py  requests.py  responses.py
src/consearch/cache/: __init__.py  client.py  decorators.py  keys.py
src/consearch/core/: __init__.py  exceptions.py  identifiers.py  models.py  normalization.py  types.py
src/consearch/db/: __init__.py  base.py  session.py
src/consearch/db/models/: __init__.py  associations.py  author.py  source_record.py  work.py
src/consearch/db/repositories/: __init__.py  author.py  base.py  work.py
src/consearch/detection/: __init__.py  identifier.py
src/consearch/resolution/: __init__.py  base.py  chain.py  registry.py
src/consearch/resolution/books/: __init__.py  base.py  google_books.py  isbndb.py  openlibrary.py
src/consearch/resolution/papers/: __init__.py  base.py  crossref.py  semantic_scholar.py
src/consearch/search/: __init__.py  client.py  indexer.py  searcher.py
src/consearch/services/: __init__.py  resolution.py  search.py
tests/: conftest.py
tests/fixtures/books/: google_books_isbn.json  isbndb_isbn.json  openlibrary_isbn.json
tests/fixtures/papers/: crossref_doi.json  semantic_scholar_doi.json
tests/integration/: conftest.py  test_api_routes.py  test_db_repositories.py
tests/unit/: conftest.py
tests/unit/api/: test_schemas.py
tests/unit/cache/: test_keys.py
tests/unit/core/: test_identifiers.py  test_normalization.py
tests/unit/detection/: test_identifier.py
tests/unit/resolution/: test_chain.py
tests/unit/resolution/books/: test_google_books.py  test_isbndb.py  test_openlibrary.py
tests/unit/resolution/papers/: test_crossref.py  test_semantic_scholar.py
